<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Task name"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/context_options"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pending_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_task">

        <RadioButton
            android:id="@+id/contextHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_radio_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="H"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/contextWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/work_radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="W"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/contextSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/school_radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="S"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/contextErrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/errand_radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="E"
            android:textSize="20dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pending_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/start_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/context_options">

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Daily" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weekly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Monthly" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yearly" />

    </RadioGroup>

    <Button
        android:id="@+id/start_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Starting On..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_options" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Starting On..."
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_date_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_options"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
